@@ -131,6 +131,7 @@ Improvements:
     * Evas textblock: Added proper size adjustments for "high" shaped texts.
     * Use the right macro to disable fcntl.
     * Edje: use Eina_Cow to reduce memory usage.
+    * Embryo: use eina_file_mkstemp().
 
 Fixes:
     * Fix a memory leak in ecore_con_dns when using ecore_con_server_connect
